[project]
name = "qoqo_myqlm"
version = "0.4.7"
description = "An inteface to execute circuits from QOQO to MYQLM"
authors = [{name="HQS Quantum Simulation GmbH", email="info@quantumsimulations.de"}]
readme = "README.md"
requires-python = ">3.8, <3.12"
dependencies = [
    "qoqo>=1.10",
    "numpy",
    'myqlm'
]
[project.optional-dependencies]
tests = [
  'pytest-cov',
  'pytest',
]
dev = [
    'ruff',
    'darglint',
    'bandit',
    'mypy',
    'black'
]

docs = [
    "pyyaml",
    "sphinx >= 2.1",
    "nbsphinx",
    "pygments",
    "recommonmark",
    "myst_parser",
    "sphinx_rtd_theme",
    "tomli"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.flake8]
max-line-length = 100
ignore = 'D400,D401,W503,ANN101,ANN102,ANN002,ANN003,ANN401,S403,S404,S301'
exclude = '.git,__pycache__,docs/conf.py,old,build,dist,test_*'
docstring-convention = "google"
per-file-ignores = [
    '__init__.py:F401',
]

[tool.mypy]
ignore_missing_imports = true
pretty = true
follow_imports = "silent"

[tool.bandit]

